--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "airtable": "^0.11.6",
     "aws-sdk": "^2.1410.0",
-    "formidable": "^3.5.0"
+    "formidable": "^3.5.1",
+    "@vercel/blob": "^0.23.4",
+    "node-fetch": "^2.7.0"
   },
   "scripts": {
     "vercel-build": "echo 'No build step required'"
